# VulkanStarter

./: .clang-format  .gitignore  .pre-commit-config.yaml  Application_8hpp.html  BasicCommandBuffers_8hpp.html  BasicRenderPass_8hpp.html  CMakeLists.txt  CommandBuffers_8hpp.html  CommandPool_8hpp.html  DebugUtilsMessenger_8hpp.html  Device_8hpp.html  GraphicsPipeline_8hpp.html  ImGuiApp_8hpp.html  ImGuiCommandBuffers_8hpp.html  ImGuiRenderPass_8hpp.html  Instance_8hpp.html  Justfile  NonCopyable_8hpp.html  QueueFamily_8hpp.html  README.md  README_8md.html  RenderPass_8hpp.html  SwapChain_8hpp.html  SyncObjects_8hpp.html  Window_8hpp.html  annotated.html  base__frag_8h.html  base__vert_8h.html  classNonCopyable.html  classgreeter_1_1Greeter.html  classvks_1_1Application.html  classvks_1_1BasicCommandBuffers.html  classvks_1_1BasicRenderPass.html  classvks_1_1CommandBuffers.html  classvks_1_1CommandPool.html  classvks_1_1DebugUtilsMessenger.html  classvks_1_1Device.html  classvks_1_1GraphicsPipeline.html  classvks_1_1ImGuiApp.html  classvks_1_1ImGuiCommandBuffers.html  (+24 more)
.github/: apt-requirements.txt  renovate.json
.github/actions/install-clang/: action.yml
.github/actions/install-vulkan/: action.yml
.github/workflows/: main.yml
app/: main.cpp
cmake/: conan.cmake  guards.cmake
cmake/manual/: cpm.cmake
cmake/scripts/: EmbedData.cmake  embed-data.cmake
cmake/tools/: compile-shader.cmake  guards.cmake  warnings.cmake
docs/: CMakeLists.txt  Doxyfile  conf.py
include/: NonCopyable.hpp
include/greeter/: greeter.hpp
include/vks/: Application.hpp  CommandBuffers.hpp  CommandPool.hpp  DebugUtilsMessenger.hpp  Device.hpp  GraphicsPipeline.hpp  Instance.hpp  QueueFamily.hpp  RenderPass.hpp  SwapChain.hpp  SyncObjects.hpp  Window.hpp
include/vks/Basic/: BasicCommandBuffers.hpp  BasicRenderPass.hpp
include/vks/ImGui/: ImGuiApp.hpp  ImGuiCommandBuffers.hpp  ImGuiRenderPass.hpp
src/: Application.cpp  CommandBuffers.cpp  CommandPool.cpp  DebugUtilsMessenger.cpp  Device.cpp  GraphicsPipeline.cpp  Instance.cpp  QueueFamily.cpp  RenderPass.cpp  SwapChain.cpp  SyncObjects.cpp  Window.cpp  greeter.cpp
src/Basic/: BasicCommandBuffers.cpp  BasicRenderPass.cpp
src/ImGui/: ImGuiApp.cpp  ImGuiCommandBuffer.cpp  ImGuiRenderPass.cpp
test/: CMakeLists.txt
test/src/: ShaderLoader.cpp
